# AutoTrainer

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
services/trainer/: pyproject.toml  requirements-training.txt
services/trainer/src/autotrainer/: __init__.py  __main__.py  benchmark.py  cli.py  compiler.py  config.py  curriculum_service.py  dataset_service.py  device_gate.py  doctor.py  environment.py  evaluation.py  evaluation_pack_service.py  evaluation_service.py  (+30 more)
services/trainer/tests/: test_benchmark.py  test_compiler.py  test_config_cli.py  test_curriculum_service.py  test_dataset_service.py  test_device_gate.py  test_doctor.py  test_environment.py  test_evaluation_config.py  test_evaluation_pack_service.py  test_evaluation_service.py  test_evaluation_workflow.py  test_example_authoring_service.py  test_fable_service.py  test_github_pr_service.py  test_github_service.py  test_history.py  test_history_service.py  test_hosting_service.py  test_language_evaluation.py  test_local_api.py  test_local_evaluation_runner.py  test_local_model_discovery.py  test_model_cache.py  test_model_download_service.py  test_model_host.py  test_model_service.py  test_project_gate.py  test_project_service.py  test_reference_model_cache.py  test_refinement_service.py  test_runtime_setup_service.py  test_source_service.py  test_sources_planner.py  test_task_authoring_service.py  test_training_dependency_contract.py  test_training_experiment.py  test_training_preflight.py  test_training_recipe.py  test_training_service.py  (+3 more)
(+76 files in other folders)
